I have changed the width of button from 30px to 40 px because it was not showing correctlty in mobile

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ input[type=passward], select{
 
 }
 button{
-  width: 30%;
+  width: 40%;
   background-color: #4CAF50;
   color: white;
   padding: 14px 20px;
